--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -66,13 +66,13 @@
 .story-title {
   font-weight: 600;
   margin-top: 40px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .story-information {
   font-size: 1.4rem;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .story-description {
